# semantic-conventions-genai-prototypes

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  versions.env
.claude/: settings.json
.claude/skills/: define-v2
.github/: AGENTS.md  CODEOWNERS  POLICIES.md  PULL_REQUEST_TEMPLATE.md  renovate.json5
.github/actions/load-version-pins/: action.yml
.github/actions/setup-reference-tooling/: action.yml
.github/instructions/: reference-instrumentation.instructions.md
.github/scripts/: prepare_release.py
.github/skills/define-v2/: SKILL.md
.github/skills/evaluate-reference/: SKILL.md
.github/skills/reference/: SKILL.md
.github/workflows/: check.yml  ci.yml  prepare-release.yml  release.yml  scorecard.yml
docs/: README.md
docs/gen-ai/: anthropic.md  aws-bedrock.md  azure-ai-inference.md  gen-ai-agent-spans.md  gen-ai-events.md  gen-ai-exceptions.md  gen-ai-metrics.md  gen-ai-spans.md  mcp.md  openai.md
docs/gen-ai/non-normative/: models.ipynb
docs/registry/attributes/: README.md  aws.md  gen-ai.md  mcp.md  model.md  openai.md
internal/tools/: README.md  convert_model_to_v2.py  overwrite_model_from_upstream.py  split_model_md.py
model/: manifest.yaml
model/aws-bedrock/: registry.yaml
model/gen-ai/: events.yaml  metrics.yaml  registry.yaml  spans.yaml
model/gen-ai/deprecated/: events-deprecated.yaml  registry-deprecated.yaml
model/mcp/: common.yaml  metrics.yaml  registry.yaml  spans.yaml
model/openai/: registry.yaml
reference/: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
reference/reports/: create-agent-span.md  embeddings-span.md  execute-tool-span.md  gen-ai-client-inference-operation-details-event.md  gen-ai-evaluation-result-event.md  inference-span.md  invoke-agent-client-span.md  invoke-agent-internal-span.md  invoke-workflow-span.md  retrieval-span.md
reference/scenarios/anthropic/: data.json  pyproject.toml  scenario.py
reference/scenarios/autogen/: data.json  pyproject.toml  scenario.py
reference/scenarios/aws-bedrock/: data.json  pyproject.toml  scenario.py
reference/scenarios/aws-bedrock-agent/: data.json  pyproject.toml  scenario.py
reference/scenarios/azure-ai-evaluation/: data.json  pyproject.toml  scenario.py
reference/scenarios/azure-ai-foundry/: data.json  pyproject.toml  scenario.py
reference/scenarios/azure-ai-inference/: data.json  pyproject.toml  scenario.py
reference/scenarios/azure-openai/: data.json  pyproject.toml  scenario.py
reference/scenarios/claude-agent-sdk/: data.json  mock_cli.cmd  mock_cli.py  pyproject.toml  scenario.py
reference/scenarios/cohere/: data.json  pyproject.toml  scenario.py
reference/scenarios/crewai/: data.json  pyproject.toml  scenario.py
reference/scenarios/deepeval/: data.json  pyproject.toml  scenario.py
reference/scenarios/dspy/: data.json  pyproject.toml  scenario.py
reference/scenarios/google-adk/: data.json  pyproject.toml  scenario.py
reference/scenarios/google-genai/: data.json  pyproject.toml  scenario.py
reference/scenarios/groq/: data.json  pyproject.toml  scenario.py
reference/scenarios/haystack/: data.json  pyproject.toml  scenario.py
reference/scenarios/instructor/: data.json  pyproject.toml  scenario.py
reference/scenarios/langchain/: pyproject.toml  scenario.py
reference/scenarios/litellm/: data.json  pyproject.toml  scenario.py
reference/scenarios/llamaindex/: data.json  pyproject.toml  scenario.py
reference/scenarios/mistralai/: data.json  pyproject.toml  scenario.py
reference/scenarios/openai/: data.json  pyproject.toml  scenario.py
reference/scenarios/openai-agents/: data.json  pyproject.toml  scenario.py
reference/scenarios/openai-assistants/: data.json  pyproject.toml  scenario.py
reference/scenarios/pydantic-ai/: data.json  pyproject.toml  scenario.py
reference/scenarios/vertexai/: data.json  pyproject.toml  scenario.py
reference/shared/: pyproject.toml  reference_shared.py
reference/src/semconv_genai/: __init__.py  attribute_spec.py  classify.py  data_files.py  parse_results.py  pipeline.py  report.py  run_scenario.py  semconv_model.py  uv_env.py  weaver.py
reference/src/semconv_genai/mock_server/: __init__.py  __main__.py  _common.py  anthropic.py  assistants.py  bedrock.py  bedrock_agent.py  cohere.py  google_genai.py  openai.py
schema-snapshot/: registry.yaml
templates/registry/markdown/: attribute_macros.j2  attribute_namespace.md.j2  attribute_table.j2  attributes_readme.md.j2  enum_macros.j2  event_macros.j2  examples_macros.j2  metric_table.j2  notes.j2  requirement.j2  sampling_macros.j2  snippet.md.j2  span_macros.j2  stability.j2  weaver.yaml
templates/registry/yaml/: registry.yaml.j2  weaver.yaml
