[project]
name = "autogen-reference-test"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat==0.7.5",
    "autogen-ext[openai]==0.7.5",
    "genai-reference-shared",
]

[tool.uv.sources]
genai-reference-shared = { path = "../../shared", editable = true }

[tool.uv]
package = false
