[project]
name = "google-adk-reference-test"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "google-adk==1.31.1",
    "google-genai==1.73.1",
    "genai-reference-shared",
]

[tool.uv.sources]
genai-reference-shared = { path = "../../shared", editable = true }

[tool.uv]
package = false
override-dependencies = [
    "opentelemetry-api==1.38.0",
    "opentelemetry-sdk==1.38.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.38.0",
]
