[project]
name = "instructor-reference-test"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "instructor==1.15.1",
    "openai==2.32.0",
    "pydantic==2.13.3",
    "genai-reference-shared",
]

[tool.uv.sources]
genai-reference-shared = { path = "../../shared", editable = true }

[tool.uv]
package = false
