[project]
name = "langchain-reference-test"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "langchain==1.2.15",
    "langchain-openai==1.2.1",
    "openai==2.32.0",
    "genai-reference-shared",
]

[tool.uv.sources]
genai-reference-shared = { path = "../../shared", editable = true }

[tool.uv]
package = false
