[project]
name = "langchain-reference-test"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "langchain==1.2.17",
    "langchain-openai==1.2.1",
    "openai==2.34.0",
    "genai-reference-shared",
]

[tool.uv.sources]
genai-reference-shared = { path = "../../shared", editable = true }

[tool.uv]
package = false
