[project]
name = "llamaindex-reference-test"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "llama-index-core==0.14.21",
    "llama-index-llms-openai==0.7.7",
    "llama-index-embeddings-openai==0.6.0",
    "genai-reference-shared",
]

[tool.uv.sources]
genai-reference-shared = { path = "../../shared", editable = true }

[tool.uv]
package = false
