[project]
name = "mistralai-reference-test"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "mistralai==2.4.4",
    "genai-reference-shared",
]

[tool.uv.sources]
genai-reference-shared = { path = "../../shared", editable = true }

[tool.uv]
package = false
override-dependencies = [
    "opentelemetry-api==1.39.1",
    "opentelemetry-sdk==1.39.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.39.1",
]
