[project]
name = "openai-agents-reference-test"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "openai==2.32.0",
    "openai-agents==0.14.5",
    "genai-reference-shared",
]

[tool.uv.sources]
genai-reference-shared = { path = "../../shared", editable = true }

[tool.uv]
package = false
