[project]
name = "pydantic-ai-reference-test"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai-slim[openai]==1.86.1",
    "genai-reference-shared",
]

[tool.uv.sources]
genai-reference-shared = { path = "../../shared", editable = true }

[tool.uv]
package = false
override-dependencies = [
    "opentelemetry-api==1.39.1",
    "opentelemetry-sdk==1.39.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.39.1",
]
